Fix sidebar social spacings

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -607,17 +607,44 @@
           font-size: 4rem;
           /* 9 */ } }
     .sidebar-content .cart-quantity {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-          -ms-flex: 1;
-              flex: 1; }
+      /* 3 */
+      /* 3 */
+      /* 4 */
+      /* 6 */
+      /* 6 */
+      /* 7 */
+      margin-right: 16px;
+      /* 9 */
+      margin-right: 1.6rem;
+      /* 9 */ }
+      @media (min-width: 1024px) {
+        .sidebar-content .cart-quantity {
+          -webkit-box-flex: 1;
+          -webkit-flex: 1;
+              -ms-flex: 1;
+                  flex: 1;
+          /* 3 */
+          /* 3 */
+          /* 4 */
+          /* 5 */
+          /* 8 */
+          margin-right: 0;
+          /* 9 */ } }
     .sidebar-content__social {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
       @media (min-width: 1024px) {
         .sidebar-content__social {
+          -webkit-box-flex: initial;
+          -webkit-flex: initial;
+              -ms-flex: initial;
+                  flex: initial;
           -webkit-box-orient: vertical;
           -webkit-box-direction: normal;
           -webkit-flex-direction: column;
@@ -641,9 +668,9 @@
           /* 6 */
           /* 6 */
           /* 7 */
-          margin-right: 24px;
+          margin-right: 8px;
           /* 9 */
-          margin-right: 2.4rem;
+          margin-right: 0.8rem;
           /* 9 */ }
           @media (min-width: 1024px) {
             .sidebar-content__social-item:not(:last-child) {
