--- a/src/sass/layouts/_sidebar.scss
+++ b/src/sass/layouts/_sidebar.scss
@@ -67,13 +67,20 @@
     }
 
     .cart-quantity {
-      flex: 1;
+      @include rem(margin-right, 16px);
+
+      @media (min-width: $desktop) {
+        flex: 1;
+        @include rem(margin-right, 0);
+      }
     }
 
     &__social {
       display: flex;
+      flex: 1;
 
       @media (min-width: $desktop) {
+        flex: initial;
         flex-direction: column;
       }
 
@@ -81,7 +88,7 @@
         @include rem(font-size, 24px);
 
         &:not(:last-child) {
-          @include rem(margin-right, 24px);
+          @include rem(margin-right, 8px);
 
           @media (min-width: $desktop) {
             margin-right: 0;
